[package]
name = "light-id"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate and manipulate incremental IDs effortlessly"
repository = "https://github.com/ntillier/Light-id"
readme = "README.md"
keywords = ["ids", "generator", "incremental", "lightweight", "base-switching", "customizable", "flexible"]
categories = ["data-structures", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false
